2007-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add gtk.
	(report-emacs-w3m-bug): Bind print-quoted to t.

	* w3m-ems.el (w3m-force-window-update): Do split-window-vertically
	instead of performing enlarge-window/shrink-window for Emacs 21.
	(w3m-tab-mouse-track-selected-tab): Add `decelerate' argument; use
	it instead of to check the value of this-command.
	(w3m-tab-move-right): Set it.
	(w3m-tab-make-keymap): Rearrange.
	(w3m-update-tab-line): Remove.

	* w3m.el (w3m-select-buffer-update): Use w3m-force-window-update
	instead of w3m-update-tab-line.

2007-03-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Tiny fix.
	(w3m-tab-make-keymap): Use next|previous-buffer-action instead of
	w3m-tab-next|previous-buffer.

2007-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Ignore mouse
	position info if mouse points to other frame; recognize wheel-up
	and wheel-down in addition to mouse-4 and mouse-5; don't respond
	to too fast operation of mouse wheel for moving a tab.

2007-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-track-mouse): New variable.
	(w3m-tab-mouse-position-adjuster): Express the values in pixel
	units rather than the number of characters.
	(w3m-tab-mouse-track-selected-tab): Be controlled by
	w3m-tab-track-mouse; calculate the mouse position in pixel units
	rather than the number of characters.
	(w3m-tab-make-keymap): Make the buffer selected by a tab the
	current buffer before performing w3m-tab-move-(left|right).
	(w3m-tab-separator-map): New keymap.
	(w3m-tab-separator): Use it as the local-map property.
	(w3m-tab-line): Use it as the local-map property in trailing space.

2007-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-unselected-face)
	(w3m-tab-unselected-retrieving-face, w3m-tab-selected-face)
	(w3m-tab-selected-retrieving-face, w3m-tab-mouse-face): Make